fixed library and wishlist pages to align with style of search results

--- a/App/static/css/main.css
+++ b/App/static/css/main.css
@@ -516,4 +516,8 @@ input, select {
 
 .title {
   font-size: 2rem;
+}
+
+.title {
+  text-align: center;
 }/*# sourceMappingURL=main.css.map */
