--- a/App/static/css/pages/all.css
+++ b/App/static/css/pages/all.css
@@ -181,4 +181,8 @@ input, select {
 
 .title {
   font-size: 2rem;
+}
+
+.title {
+  text-align: center;
 }/*# sourceMappingURL=all.css.map */
